# Steadyum

./: .gitignore  Cargo.toml  LICENSE  README.md
assets/: grid_shader.wgsl  instancing.wgsl  third-party-licenses.md
crates/steadyum-api-types/: Cargo.toml
crates/steadyum-api-types/src/: array_ser.rs  kinematic.rs  kvs.rs  lib.rs  messages.rs  objects.rs  partitionner.rs  queries.rs  region_db.rs  simulation.rs  zenoh.rs
crates/steadyum-partitionner/: Cargo.toml
crates/steadyum-partitionner/src/: main.rs
crates/steadyum-runner/: Cargo.toml
crates/steadyum-runner/src/: cli.rs  commands.rs  connected_components.rs  main.rs  neighbors.rs  region_assignment.rs  runner.rs  server.rs  watch.rs
src/: cli.rs  layers.rs  main.rs  propagate_visibility.rs
src/builtin_scenes/: mod.rs
src/builtin_scenes/dim2/: mod.rs  pyramids2.rs
src/builtin_scenes/dim3/: killing_runners3.rs  mod.rs  pyramids3.rs  pyramids_light3.rs
src/camera/: camera2d.rs  camera3d.rs  mod.rs
src/control/: mod.rs
src/drag/: mod.rs
src/drag/mouse/: click.rs
src/floor/: mod.rs
src/insertion/: mod.rs
src/insertion/mouse/: click.rs  hover.rs  mod.rs
src/operation/: add_collision_shape.rs  add_intersection.rs  add_plane.rs  clear_scene.rs  import_mesh.rs  import_scene.rs  mod.rs  operations.rs  plugin.rs
src/projectile/: mod.rs
src/projectile/mouse/: click.rs  hover.rs
src/render/: add_missing_transforms.rs  collision_shape_outline_render2d.rs  collision_shape_outline_render3d.rs  collision_shape_render.rs  components.rs  instancing.rs  joint_render.rs  mod.rs  plugins.rs
src/selection/: mod.rs  selection_shape.rs
src/selection/mouse/: click.rs  hover.rs  mod.rs  track.rs
src/selection/transform_gizmo/: gizmo_material.rs  mod.rs  normalization.rs
src/selection/transform_gizmo/assets/: gizmo_material.wgsl
src/selection/transform_gizmo/mesh/: arrow.rs  mod.rs  truncated_torus.rs
src/storage/: db.rs  mod.rs  plugin.rs  systems.rs  zenoh.rs
src/styling/: color_generator.rs  dark_mode.rs  mod.rs  plugin.rs  polylines.rs
src/ui/: debug_render.rs  gizmo.rs  input_blocking.rs  keyboard.rs  main_menu.rs  mod.rs  play_stop.rs  plugin.rs  popup_menu.rs  right_panel.rs  simulation_infos.rs  tools.rs  ui_state.rs
src/utils/: bevy_mesh_conversion.rs  mod.rs  rigid_body_collider_bundles.rs
