[package]
name = "steadyum-partitionner"
version = "0.1.0"
edition = "2021"

[features]
default = [ ]
dim3 = [ "steadyum-api-types/dim3" ]
dim2 = [ "steadyum-api-types/dim2" ]

[dependencies]
serde_json = "1"
steadyum-api-types = { path = "../steadyum-api-types", features = [ "zenoh" ] }
anyhow = "1"
uuid = { version = "1", featurse = [ "serde" ] }
zenoh = "0.7.2-rc"
env_logger = "0.10.0"
log = "0.4.19"
mongodb = { version = "2", feature = [ "sync" ] }
bson = "2"